# src/demo/app/api/protos/gen_protos.go
@@ -3,6 +3,14 @@ package protos
 // Generated by niuhe.idl
 // 此文件由 niuhe.idl 自动生成, 请勿手动修改
 
+// 空响应
+type NoneRsp struct {
+}
+
+// 空请求
+type NoneReq struct {
+}
+
 // 系统配置表
 type ConfigItem struct {
 	Id       int64  `json:"id" zpf_name:"id"`                       //	id
@@ -51,10 +59,8 @@ type HelloRsp struct {
 
 // RPC测试用例请求参数
 type XxxYyyReqMsg struct {
-	CountryCode int    `json:"country_code" zpf_name:"country_code"`                 //	国家码
-	PhoneNumber string `json:"phone_number" zpf_name:"phone_number" zpf_reqd:"true"` //	用户名
-	Password    string `json:"password" zpf_name:"password" zpf_reqd:"true"`         //	密码
-	Appid       string `json:"appid" zpf_name:"appid" zpf_reqd:"true"`               //	应用ID
+	Name     string `json:"name" zpf_name:"name" zpf_reqd:"true"`         //	用户名
+	Password string `json:"password" zpf_name:"password" zpf_reqd:"true"` //	密码
 }
 
 // RPC测试用例返回参数
