# src/demo/app/api/protos/gen_routes.go
@@ -23,8 +23,9 @@ var RouteItems = []*RouteItem{
 	{Method: "POST", Path: "/api/config/add/", Name: "添加 Config 信息"},
 	{Method: "POST", Path: "/api/config/update/", Name: "更新 Config 信息"},
 	{Method: "DELETE", Path: "/api/config/delete/", Name: "删除 Config 信息"},
-	{Method: "GET", Path: "/api/hello/world/", Name: "示例接口"},
-	{Method: "GET", Path: "/api/hello/docs/", Name: "协议文档"},
+	{Method: "GET", Path: "/api/hellow/world/", Name: "示例接口"},
+	{Method: "GET", Path: "/api/hellow/docs/", Name: "协议文档"},
+	{Method: "GET", Path: "/api/hellow/web/", Name: "网页示例"},
 	{Method: "GET", Path: "/api/xxx/yyy/", Name: "RPC测试用例", Codes: []niuhe.IntConstItem{
 		consts.LanguageType.ZH_CN, // 1 - 简体中文
 		consts.Errors.NOT_FOUND,   // 404 - 查找的数据不存在,
