# typings/api.ts
@@ -1,6 +1,6 @@
 
 // Generated by niuhe.idl, search "niuhe" plugin for vscode
-// 重新生成时本文件将被复写, 请不要手动修改. 配置 "#tsapi" 可指定新路径
+// 重新生成时本文件将被复写, 请不要手动修改. 配置 "tsapi" 可指定新路径
 
 import { ajax_get, ajax_post, ajax_any } from "./request";
 
@@ -67,30 +67,37 @@ export const deleteConfigDelete = (data: Demo.ConfigDeleteReq): Promise<Rsp<Demo
 
 /**
  * 示例接口
- * @path GET /api/hello/world/
+ * @path GET /api/hellow/world/
  * @param name string 用户名
  * @return Demo.HelloRsp
  */
-export const getHelloWorld = (data: Demo.HelloReq): Promise<Rsp<Demo.HelloRsp>> => {
-	return ajax_get("/api/hello/world/", data);
+export const getHellowWorld = (data: Demo.HelloReq): Promise<Rsp<Demo.HelloRsp>> => {
+	return ajax_get("/api/hellow/world/", data);
 };
 
 /**
  * 协议文档
- * @path GET /api/hello/docs/
+ * @path GET /api/hellow/docs/
+ * @return Demo.NoneRsp
+ */
+export const getHellowDocs = (data: Demo.NoneReq): Promise<Rsp<Demo.NoneRsp>> => {
+	return ajax_get("/api/hellow/docs/", data);
+};
+
+/**
+ * 网页示例
+ * @path GET /api/hellow/web/
  * @return Object 任意结构
  */
-export const getHelloDocs = (data: Object): Promise<Object> => {
-	return ajax_get("/api/hello/docs/", data);
+export const getHellowWeb = (data: Object): Promise<Object> => {
+	return ajax_get("/api/hellow/web/", data);
 };
 
 /**
  * RPC测试用例
  * @path GET /api/xxx/yyy/
- * @param country_code number 国家码
- * @param phone_number string 用户名
+ * @param name string 用户名
  * @param password string 密码
- * @param appid string 应用ID
  * @return Demo.XxxYyyRspMsg
   * @codes 错误码列表
  * 1 (ZH_CN) 简体中文
